plans/rancher2/traefik/kibana-ingress.yml
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: kibana
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: kibana.cyrille.aws.zenika.com
    http:
      paths:
      - path: ""
        backend:
          serviceName: kibana-kibana
          servicePort: 5601
